FIX: Positions Overflow

--- a/src/stylesheets/components/Widgets/Positions/_Positions_Info/_Positions_InfoCore.scss
+++ b/src/stylesheets/components/Widgets/Positions/_Positions_Info/_Positions_InfoCore.scss
@@ -43,8 +43,7 @@
         
         display: flex;
 		width: 100%;
-        overflow-x: scroll;
-        overflow-y: hidden;
+        overflow: hidden;
         height: 30px;
         
         @include Spacer(margin,all, zero auto);
